Closed Bug 402901 Opened 18 years ago Closed 18 years ago

trace_malloc_leaks on bm-xserve11 increase related to unified toolbar

Categories

(Core :: Widget: Cocoa, defect, P3)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta2

People

(Reporter: peterv, Assigned: cbarrett)

References

Details

Attachments

(1 file, 1 obsolete file)

As far as I can tell bug 402125 *enabled* the unified toolbar feature that was implemented in 303110. I guess that would point to a problem with the modified code for the disabled or "normal" case?
Assignee: joshmoz → cbarrett
Attached patch fix (obsolete) — Splinter Review
Gavin, exactly what you said made me suspicious and I took a look at the leak information again, and then looked at the code. Noticed I was not releasing the CGShadingRef!
Attachment #287738 - Flags: review?(joshmoz)
Attached patch real fixSplinter Review
Attached the wrong patch.
Attachment #287738 - Attachment is obsolete: true
Attachment #287739 - Flags: review?(joshmoz)
Attachment #287738 - Flags: review?(joshmoz)
Attachment #287739 - Flags: superreview?(roc)
Attachment #287739 - Flags: review?(joshmoz)
Attachment #287739 - Flags: review+
Flags: blocking1.9+
Priority: -- → P3
Target Milestone: --- → mozilla1.9 M10
Attachment #287739 - Flags: superreview?(roc) → superreview+
reviewer information didn't make it in to the checkin comment, grr... Checking in widget/src/cocoa/nsCocoaWindow.mm; /cvsroot/mozilla/widget/src/cocoa/nsCocoaWindow.mm,v <-- nsCocoaWindow.mm new revision: 1.115; previous revision: 1.114 done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: