Bug 402901 - Don't leak a CGShadingRef when using default titlebar drawing.